--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 #user  nobody;
 worker_processes  2;
 
-error_log  /Users/jinzr/webserver/logs/nginx_lua/error.log;
+error_log  /Users/jinzr/webserver/logs/nginx_lua/error.log info;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
@@ -40,7 +40,12 @@ http {
     lua_max_running_timers 256;    #最大同时运行任务数
 
     init_by_lua_file conf/lua/init.lua;
-    init_worker_by_lua_file conf/lua/init_worker.lua;
+    #init_worker_by_lua_file conf/lua/init_worker.lua;
+
+    lua_socket_pool_size 30;
+    lua_socket_keepalive_timeout 60s;
+
+    resolver 8.8.8.8;
 
     server {
         listen       8080;
@@ -102,6 +107,9 @@ http {
     #    }
     #}
 
+    upstream backend {
+        server s.taobao.com;
+    }
 
     # HTTPS server
     #
