--- a/vhosts/lua.conf
+++ b/vhosts/lua.conf
@@ -1,6 +1,36 @@
 server {
-   listen 8088;
+   listen 80;
    server_name _;
+
+   #first match ngx location
+   set $template_location "/templates";
+   #then match root read file 
+   set $template_root "/Users/jinzr/html/lua/templates";
+
+   location /templates {
+   	internal;
+   	alias "/Users/jinzr/html/lua/templates2";
+   }
+
+	location /lua_template_1 {  
+	    default_type 'text/html';  
+	    lua_code_cache on;  
+	    content_by_lua_file conf/lua/test_template_1.lua;  
+	}
+
+	location /lua_template_2 {  
+	    default_type 'text/html';  
+	    lua_code_cache on;  
+	    content_by_lua_file conf/lua/test_template_2.lua;  
+	}  
+
+	location /lua_template_3 {  
+	    default_type 'text/html';  
+	    lua_code_cache on;  
+	    content_by_lua_file conf/lua/test_template_3.lua;  
+	}  
+
+
    location /lua {
 	default_type 'text/html';
 	#lua_code_cache off;
@@ -65,4 +95,99 @@ server {
 	access_by_lua_file conf/lua/test_access.lua;
 	echo "access";
    }
+
+   location /lua_module_1 {
+	default_type "text/html";
+	lua_code_cache on;
+	content_by_lua_file conf/lua/test_module_1.lua;
+   }
+
+   location /lua_redis_basic {
+	default_type "text/html";
+	lua_code_cache on;
+	content_by_lua_file conf/lua/test_redis_basic.lua;
+   }
+
+   location /lua_mysql {
+	default_type 'text/html';
+	lua_code_cache on;
+	content_by_lua_file conf/lua/test_mysql.lua;
+   }
+
+   location /lua_http_1 {  
+	   default_type 'text/html';  
+	   lua_code_cache on;  
+	   content_by_lua_file conf/lua/test_http_1.lua;  
+	} 
+
+	location ~ /proxy/(.*){
+		internal;
+		#content_by_lua 'ngx.say("proxy")';
+		proxy_pass http://backend/$1$is_args$args;
+		keepalive_timeout 100;
+	}
+
+	location /lua_http_2 {  
+	   default_type 'text/html';  
+	   lua_code_cache on;
+	   content_by_lua_file conf/lua/test_http_2.lua;  
+	} 
+
+	location /lua_cjson {  
+	   default_type 'text/html';  
+	   lua_code_cache on;
+	   content_by_lua_file conf/lua/test_cjson.lua;  
+	} 
+
+	location /lua_dkjson {  
+	   default_type 'text/html';  
+	   lua_code_cache on;
+	   content_by_lua_file conf/lua/test_dkjson.lua;  
+	} 
+
+	location /lua_lrucache {  
+	   default_type 'text/html';  
+	   lua_code_cache on;
+	   content_by_lua_file conf/lua/test_lrucache.lua;  
+	} 
+
+	location /test1 {  
+	    keepalive_timeout 60s;   
+	    keepalive_requests 1000;  
+	    content_by_lua '  
+	        ngx.print("test1 : ", ngx.req.get_uri_args()["a"])  
+	        ngx.log(ngx.ERR, "request test1")  
+	    ';  
+	}  
+	
+	location /test2 {  
+	    keepalive_timeout 60s;   
+	    keepalive_requests 1000;  
+	    content_by_lua '  
+	        ngx.print("test2 : ", ngx.req.get_uri_args()["a"])  
+	        ngx.log(ngx.ERR, "request test2")  
+	    ';  
+	}  
+
+	location /test {  
+	     lua_socket_connect_timeout 3s;  
+	     lua_socket_send_timeout 3s;  
+	     lua_socket_read_timeout 3s;  
+	     lua_socket_pool_size 100;  
+	     lua_socket_keepalive_timeout 60s;  
+	     lua_socket_buffer_size 8k;  
+	  
+	     content_by_lua '  
+	         local res1, res2 = ngx.location.capture_multi{  
+	               { "/test1", { args = ngx.req.get_uri_args() } },  
+	               { "/test2", { args = ngx.req.get_uri_args()} },  
+	         }  
+	         if res1.status == ngx.HTTP_OK then  
+	             ngx.print(res1.body)  
+	         end  
+	         if res2.status ~= ngx.HTTP_OK then  
+	            --记录错误  
+	         end  
+	     ';  
+	}  
 }
